# HCS_course_project

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/mbot_explore/: global_rrt_detector  local_rrt_detector
devel/lib/mbot_navigation/: move_test
devel/lib/pkgconfig/: limo_gazebo_sim.pc  mbot_explore.pc  mbot_navigation.pc  mbot_recognition.pc  mbot_slam.pc
devel/share/limo_gazebo_sim/cmake/: limo_gazebo_simConfig.cmake
devel/share/mbot_explore/cmake/: mbot_explore-msg-extras.cmake  mbot_explore-msg-paths.cmake  mbot_exploreConfig.cmake
hardware/src/limo_bringup/maps/: map1.pgm  (+2 more)
hardware/src/limo_explore/: CMakeLists.txt  package.xml
hardware/src/limo_explore/include/: costmap_client.h  limo_explore.h
hardware/src/limo_explore/launch/: limo_explore.launch
hardware/src/limo_explore/rviz/: rrt.rviz
hardware/src/limo_explore/src/: costmap_client.cpp  limo_explore.cpp
simulation/src/move_base_goal/: CMakeLists.txt  package.xml
src/mbot_explore/: CMakeLists.txt
src/mbot_explore/launch/: rrt_exploration.launch
src/mbot_explore/rviz/: rrt.rviz
src/mbot_explore/scripts/: assigner.py  boundary.py  filter.py  functions.py  getfrontier.py
src/mbot_navigation/launch/: amcl.launch  move_base.launch  nav_match_demo.launch
src/mbot_recognition/launch/: find_target.launch
src/mbot_recognition/scripts/: gen_obj_gazebo.py  object_detect.py
src/mbot_recognition/src/: move_to_target.cpp
src/move_base_goal/launch/: fina_goal_run.launch
src/move_base_goal/src/: first_bot_goal_final.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/scripts/: best_frontier_points.txt  choose_point.py  frontier_points.txt  frontier_position.txt  my_planning.py  object_position.txt  object_positions_dict.txt  target_frontier_position.txt  target_object_position.txt
(+619 files in other folders)
